--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествие по России</title>
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
-
+  <div class="page">
+    <header class="header">
+      <img src="./images/header-logo.svg" alt="Логотип 'Россия'" class="header__logo">
+      <a href="#" class="header__lang-link">Ru</a>
+      <a href="#" class="header__lang-link">En</a>
+    </header>
+  </div>
 </body>
 </html>
