--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
   <div class="page">
     <header class="header">
       <img src="./images/header-logo.svg" alt="Логотип 'Россия'" class="header__logo">
-      <a href="#" class="header__lang-link">Ru</a>
-      <a href="#" class="header__lang-link">En</a>
+      <p class="header__lang-link">Ru</p>
+      <p class="header__lang-link">En</p>
     </header>
+    <main class="content">
+        <section class="lead">
+          <h1 class="lead__title">Путешествия по России</h1>
+          <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+          <img src="./images/lead-polka.jpg" alt="Женщина в поезде и карта городов России" class="lead__image">
+          <p class="lead__caption">ваша полка — верхняя</p>
+        </section>
+    </main>
   </div>
 </body>
 </html>
