--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
           <img src="./images/lead-polka.jpg" alt="Женщина в поезде и карта городов России" class="lead__image">
           <p class="lead__caption">ваша полка — верхняя</p>
         </section>
+        <section class="intro">
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+          <ul class="intro__list">
+            <li>Часовых поясов <span class="intro__list_number">11</span></li>
+            <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_number">12</span></li>
+            <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_number">16</span></li>
+            <li>Природных заповедников <span class="intro__list_number">105</span></li>
+            <li>Аэропортов <span class="intro__list_number">241</span></li>
+          </ul>
+        </section>
+        <section class="photo-grid">
+          <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы с облаками" class="photo-grid__item">
+          <img src="./images/photo-grid-tuman.jpg" alt="Поле с тюками сена" class="photo-grid__item">
+          <img src="./images/photo-grid-sochi.jpg" alt="Лес в тумане" class="photo-grid__item">
+          <img src="./images/photo-grid-arisa.jpg" alt="Колесо машины на льду" class="photo-grid__item">
+          <img src="./images/photo-grid-baikal.jpg" alt="Море" class="photo-grid__item">
+          <img src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус" class="photo-grid__item">
+          <img src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода и волнорезы" class="photo-grid__item">
+          <img src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатские горы" class="photo-grid__item">
+          <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вулкан" class="photo-grid__item">
+          <img src="./images/photo-grid-baikal-2.jpg" alt="Озеро Байкал и горы" class="photo-grid__item">
+          <img src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo-grid__item">
+        </section>
     </main>
   </div>
 </body>
