--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <title>Путешествие по России</title>
   <link rel="stylesheet" href="pages/index.css">
 </head>
-<body>
+<body class="body">
   <div class="page">
     <header class="header">
       <img src="./images/header-logo.svg" alt="Логотип 'Россия'" class="header__logo">
-      <p class="header__lang-link">Ru</p>
-      <p class="header__lang-link">En</p>
+      <div class="header__lang-links">
+        <p class="header__lang-link">Ru</p>
+        <p class="header__lang-link">En</p>
+      </div>
     </header>
     <main class="content">
         <section class="lead">
@@ -33,18 +35,20 @@
           </ul>
         </section>
         <section class="photo-grid">
-          <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__item">
-          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы с облаками" class="photo-grid__item">
-          <img src="./images/photo-grid-tuman.jpg" alt="Поле с тюками сена" class="photo-grid__item">
-          <img src="./images/photo-grid-sochi.jpg" alt="Лес в тумане" class="photo-grid__item">
-          <img src="./images/photo-grid-arisa.jpg" alt="Колесо машины на льду" class="photo-grid__item">
-          <img src="./images/photo-grid-baikal.jpg" alt="Море" class="photo-grid__item">
-          <img src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус" class="photo-grid__item">
-          <img src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода и волнорезы" class="photo-grid__item">
-          <img src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатские горы" class="photo-grid__item">
-          <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вулкан" class="photo-grid__item">
-          <img src="./images/photo-grid-baikal-2.jpg" alt="Озеро Байкал и горы" class="photo-grid__item">
-          <img src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo-grid__item">
+          <div class="photo-grid__list">
+            <img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__item">
+            <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы с облаками" class="photo-grid__item">
+            <img src="./images/photo-grid-tuman.jpg" alt="Поле с тюками сена" class="photo-grid__item">
+            <img src="./images/photo-grid-sochi.jpg" alt="Лес в тумане" class="photo-grid__item">
+            <img src="./images/photo-grid-arisa.jpg" alt="Колесо машины на льду" class="photo-grid__item">
+            <img src="./images/photo-grid-baikal.jpg" alt="Море" class="photo-grid__item">
+            <img src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус" class="photo-grid__item">
+            <img src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода и волнорезы" class="photo-grid__item">
+            <img src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатские горы" class="photo-grid__item">
+            <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вулкан" class="photo-grid__item">
+            <img src="./images/photo-grid-baikal-2.jpg" alt="Озеро Байкал и горы" class="photo-grid__item">
+            <img src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo-grid__item">
+          </div>
         </section>
         <section class="places">
           <article class="place">
