--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="header">
       <img src="./images/header-logo.svg" alt="Логотип 'Россия'" class="header__logo">
       <div class="header__lang-links">
-        <p class="header__lang-link">Ru</p>
-        <p class="header__lang-link">En</p>
+        <a href="#" class="header__lang-link header__lang-link_line">Ru</a>
+        <a href="#" class="header__lang-link">En</a>
       </div>
     </header>
     <main class="content">
@@ -54,7 +54,7 @@
           <div class="place__item">
             <h2 class="place__title">Куршская коса</h2>
             <div class="place__website">
-              <p class="place__url-heading">URL</p>
+              <p class="place__url-heading">url</p>
               <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
             </div>
             <img src="./images/place-kosa.jpg" alt="Море" class="place__image">
@@ -66,7 +66,7 @@
           <div class="place__item">
             <h2 class="place__title">Кольский</h2>
             <div class="place__website">
-              <p class="place__url-heading">URL</p>
+              <p class="place__url-heading">url</p>
               <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" target="_blank">National Geographic</a>
             </div>
             <img src="./images/place-kolsky.jpg" alt="Горы" class="place__image">
@@ -80,7 +80,7 @@
           <div class="place__item">
             <h2 class="place__title">Алтай</h2>
             <div class="place__website">
-              <p class="place__url-heading">URL</p>
+              <p class="place__url-heading">url</p>
               <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link" target="_blank">Facebook</a>
             </div>
             <img src="./images/place-altai.jpg" alt="Ноутбук на фоне леса" class="place__image">
@@ -93,7 +93,7 @@
           <div class="place__item">
             <h2 class="place__title">Зимний Байкал</h2>
             <div class="place__website">
-              <p class="place__url-heading">URL</p>
+              <p class="place__url-heading">url</p>
               <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
             </div>
             <img src="./images/place-winter-baikal.jpg" alt="Лёд" class="place__image">
@@ -107,7 +107,7 @@
           <div class="place__item">
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
-              <p class="place__url-heading">URL</p>
+              <p class="place__url-heading">url</p>
               <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru</a>
             </div>
             <img src="./images/place-karelia.jpg" alt="Река и лес" class="place__image">
