--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <img src="./images/header-logo.svg" alt="Логотип 'Россия'" class="header__logo">
       <div class="header__lang-links">
-        <a href="#" class="header__lang-link header__lang-link_line">Ru</a>
+        <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
         <a href="#" class="header__lang-link">En</a>
       </div>
     </header>
