--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h2 class="place__title">Карелия</h2>
             <div class="place__website">
               <p class="place__url-heading">url</p>
-              <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru</a>
+              <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
             </div>
             <img src="./images/place-karelia.jpg" alt="Река и лес" class="place__image">
             <div class="place__text">
